<resources>
    <string name="app_name">QuizApp</string>

    <string name="quiz">Quiz</string>
    <string name="quiz_01_dot">Q1.</string>
    <string name="quiz_02_dot">Q2.</string>
    <string name="quiz_03_dot">Q3.</string>
    <string name="quiz_04_dot">Q4.</string>
    <string name="quiz_05_dot">Q5.</string>
    <string name="quiz_06_dot">Q6.</string>
    <string name="quiz_07_dot">Q7.</string>
    <string name="quiz_08_dot">Q8.</string>
    <string name="quiz_09_dot">Q9.</string>
    <string name="quiz_10_dot">Q10.</string>

    <string name="quiz_01">1</string>
    <string name="quiz_02">2</string>
    <string name="quiz_03">3</string>
    <string name="quiz_04">4</string>
    <string name="quiz_05">5</string>
    <string name="quiz_06">6</string>
    <string name="quiz_07">7</string>
    <string name="quiz_08">8</string>
    <string name="quiz_09">9</string>
    <string name="quiz_10">10</string>

    <string name="submit">Submit</string>
    <string name="correct_number">Number of correct answer: %d</string>

    <string name="which_words_true_question">Which words make this statement true?</string>
    <string name="quiz_statement_01">72 __________ 78</string>
    <string name="quiz_01_answer_01">is greater than</string>
    <string name="quiz_01_answer_02">is less than</string>
    <string name="quiz_01_answer_03">is equal to</string>

    <string name="which_odd_number_comes_question">Which odd number comes right after 14?</string>
    <string name="answer_hint_text">Enter the answer</string>

    <string name="select_same_result">Select all the formulas with the same result.</string>
    <string name="quiz_statement_03">15 + 3</string>
    <string name="quiz_03_answer_01">14 + 4</string>
    <string name="quiz_03_answer_02">10 + 9</string>
    <string name="quiz_03_answer_03">9 + 9</string>
    <string name="quiz_03_answer_04">4 + 11</string>
    <string name="quiz_03_answer_05">5 + 9</string>

    <string name="what_time_question">What time does the clock show?</string>
    <string name="clock">clock</string>
    <string name="quiz_04_answer_01">10 : 10</string>
    <string name="quiz_04_answer_02">02 : 10</string>
    <string name="perfect">Perfect!\n</string>

    <string name="what_shape_comes_question">What shape comes next?</string>

    <string name="select_equal_parts">Select all the pictures that shows equal parts.</string>

    <string name="which_group_has_more_question">Which group has more?</string>

    <string name="which_expression_question">Which expression describe the model?</string>
    <string name="star_group">3 star groups</string>
    <string name="quiz_08_answer_01">2 x 2</string>
    <string name="quiz_08_answer_02">2 x 3</string>

    <string name="which_number_question">Which number makes the equation true?</string>
    <string name="quiz_09_expression"> + 8 = 14 + 6</string>
    
    <string name="what_color_question">What color is the sixth square? Start counting from the left.</string>
    <string name="color_table">Color table</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>

    <string name="result">Result</string>
    <string name="result_o">O</string>
    <string name="result_x">X</string>

</resources>
