<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/question_margin_bottom"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/QuestionNumberText"
            android:text="@string/quiz_03" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/select_same_result" />

    </LinearLayout>

    <TextView
        style="@style/StatementText"
        android:text="@string/quiz_statement_03" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/answer_margin_start_end"
        android:layout_marginEnd="@dimen/answer_margin_start_end"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/q3_answer1"
            style="@style/AnswerText"
            android:text="@string/quiz_03_answer_01" />

        <CheckBox
            android:id="@+id/q3_answer2"
            style="@style/AnswerText"
            android:text="@string/quiz_03_answer_02" />

        <CheckBox
            android:id="@+id/q3_answer3"
            style="@style/AnswerText"
            android:text="@string/quiz_03_answer_03" />

        <CheckBox
            android:id="@+id/q3_answer4"
            style="@style/AnswerText"
            android:text="@string/quiz_03_answer_04" />

        <CheckBox
            android:id="@+id/q3_answer5"
            style="@style/AnswerText"
            android:text="@string/quiz_03_answer_05" />

    </LinearLayout>

</LinearLayout>