<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result_table"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/question_margin_bottom"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        style="@style/QuestionNumberText"
        android:text="@string/result" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <TableRow>

            <TextView
                style="@style/TableQuizNumberText"
                android:text="@string/quiz_01" />

            <TextView
                style="@style/TableQuizNumberText"
                android:text="@string/quiz_02" />

            <TextView
                style="@style/TableQuizNumberText"
                android:text="@string/quiz_03" />

            <TextView
                style="@style/TableQuizNumberText"
                android:text="@string/quiz_04" />

            <TextView
                style="@style/TableQuizNumberText"
                android:text="@string/quiz_05" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/result_01"
                style="@style/TableQuizResultText"
                android:text="" />

            <TextView
                android:id="@+id/result_02"
                style="@style/TableQuizResultText"
                android:text="" />

            <TextView
                android:id="@+id/result_03"
                style="@style/TableQuizResultText"
                android:text="" />

            <TextView
                android:id="@+id/result_04"
                style="@style/TableQuizResultText"
                android:text="" />

            <TextView
                android:id="@+id/result_05"
                style="@style/TableQuizResultText"
                android:text="" />

        </TableRow>

    </TableLayout>

</LinearLayout>