<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/question_margin_bottom"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/QuestionNumberText"
            android:text="@string/quiz_02" />

        <TextView
            style="@style/QuestionText"
            android:text="@string/which_odd_number_comes_question" />

    </LinearLayout>

    <EditText
        android:id="@+id/q2_answer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/answer_margin_start_end"
        android:layout_marginEnd="@dimen/answer_margin_end"
        android:hint="@string/answer_hint_text"
        android:inputType="number" />

</LinearLayout>